證券交易法 2001.10.31

--- a/行政-財政及金融/證券交易法.md
+++ b/行政-財政及金融/證券交易法.md
@@ -86,9 +86,9 @@
 
 * 24 公司依本法發行新股者，其以前未依本法發行之股份，視為已依本法發行。
 
-* 25 公開發行股票之公司於登記後，應即將其董事、監察人、經理人及持有股份超過股份總額百分之十之股東，所持有之本公司股票種類、股數及票面金額，向主管機關申報並公告之。前項股票持有人，應於每月五日以前將上月份持有股數變動之情形，向公司申報；公司應於每月十五日以前，彙總向主管機關申報，必要時主管機關得命令其公告之。第二十二條之二第三項之規定，於計算前二項持有股數準用之。第一項之股票經設定質權者，出質人應即通知公司；公司應於其質權設定後五日內，將其出質情形，向主管機關申報並公告之。
+* 25 公開發行股票之公司於登記後，應即將其董事、監察人、經理人及持有股份超過股份總額百分之十之股東，所持有之本公司股票總類及股數，向主管機關申報並公告之。前項股票持有人，應於每月五日以前將上月份持有股數變動之情形，向公司申報，公司應於每月十五日以前，彙總向主管機關申報。必要時，主管機關得命令其公告之。第二十二條之二第三項之規定，於計算前二項持有股數準用之。第一項之股票經設定質權者，出質人應即通知公司；公司應於其質權設定後五日內，將其出質情形，向主管機關申報並公告之。
 
-> 釋：一、配合第二十二條之二之增訂，將第一項大股東持有股份總額，由「達股份總額百分之五以上」修正為「超過股份總額百分之十」。二、對董事、監察人、經理人、大股東等股權變動情形之申報，現行第二項僅規定由公司辦理，惟當事人買賣公司股票，若未向公司申報，公司並不知情（目前股票交易未實施過戶交易），不無影響股權申報之績效，爰予以修正，增列第一項所定股票持有人應於每月五日以前向公司申報股權變動情形。三、增訂第三項，規定第二十二條之二第三項所定董事等持有之股票，包括其配偶、未成年子女及利用他人名義持有者，於計算本條第一項、第二項持有股數準用之。四、現行第三項移列第四項。
+> 釋：為呼應取消公司法票面金額之規定，爰刪除證交法有關票面金額之文字規定。
 
 * 25.1 公開發行股票公司出席股東會使用委託書應予限制、取締或管理；其規則由主管機關定之。使用委託書違反前項所定規則者，其代理之表決權不予計算。
 
@@ -106,7 +106,9 @@
 
 > 釋：一、本條新增。二、目前各公開發行公司之股票，已依主管機關所訂定「公開發行股票統一規格要點」換發統一規格股票，每股金額並均為新臺幣壹拾元。復依本法第一百三十八條授權，證券交易所對於上市股票之買賣，係以每股金額十元一千股為一成交單位或其倍數，不足一成交單位者為零股交易。股票公開發行公司因歷年不斷增資配股，致使持有零股股東人數眾多，幾達各該公司股東總人數百分之四十以上，但其總持股數僅為各該公司發行股數百分之一以下，所占比例甚微。實務上公司必須將開會通知書以掛號寄發各股東（便於取證），對於已成為大眾化之股票發行公司造成人力、物力一大負荷，迭經各股票發行公司反應，爰增訂本條。
 
-* 27 主管機關對於公開發行之股票，得規定其每股之最低或最高金額。但規定前已准發行者，得仍照原金額，其增資發行之新股亦同。公司更改其每股金額，每年度以一次為限。
+* 27 主管機關對於公開發行之股票，得規定其每股之最低或最高金額。但規定前已准發行者，得仍照原金額；其增資發行之新股，亦同。公司更改其每股發行價格，應向主管機關申報。
+
+> 釋：第二項「每股金額，每年度以一次為限。」修改為「每股發行價格，應向主管機關申報。」
 
 * 28 公司經營之事業，以由公眾投資為適當者，得由財政部事先以命令規定發起人認足股份數額之一定限度。其在限度以外之股份，應先行公開招募；招募不足時，由發起人認足之，並得規定一定小額認股者之優先認股權。公司成立後發行新股時，準用前項之規定。但以公積或其他準備轉作資本者，不在此限。
 
@@ -170,9 +172,9 @@
 
 * 42 公司對於未依本法發行之股票，擬在證券交易所上市或於證券商營業處所買賣者，應先向主管機關申請補辦本法規定之有關發行審核程序。未依前項規定補辦發行審核程序之公司股票，不得為本法之買賣，或為買賣該種股票之公開徵求或居間。
 
-* 43 有價證券買賣之給付或交割，應以現款、現貨為之。但已上市之有價證券買賣，其交割期間及預繳買賣證據金數額，得由主管機關以命令定之。證券集中保管事業保管之有價證券，其買賣之交割，得以帳簿劃撥方式為之；其作業辦法，由主管機關定之。以證券集中保管事業保管之有價證券為設質標的者，其設質之交付，得以帳簿劃撥方式為之，並不適用民法第九百零八條之規定。證券集中保管事業以混合保管方式保管之有價證券，由所有人按其送存之種類、數量分別共有；領回時，並得以同種類、同數量之有價證券返還之。證券集中保管事業為處理保管業務，得就保管之股票、公司債以該證券集中保管事業之名義登載於股票發行公司股東名簿或公司債存根簿。證券集中保管事業於股票、公司債發行公司召開股東會、債權人會議，或決定分派股息及紅利或其他利益，或還本付息前，將所保管股票及公司債所有人之本名或名稱、住所或居所及所持有數額通知該股票及公司債之發行公司時，視為已記載於公司股東名簿、公司債存根簿或已將股票、公司債交存公司，不適用公司法第一百六十五條第一項、第一百七十六條、第二百六十條及第二百六十三條第三項之規定。前二項規定於政府債券及其他有價證券準用之。
+* 43 在證券交易所上市或證券商營業處所買賣之有價證券之給付或交割應以現款、現貨為之。其交割期間及預繳買賣證據金數額，得由主管機關以命令定之。證券集中保管事業保管之有價證券，其買賣之交割，得以帳簿劃撥方式為之；其作業辦法，由主管機關定之。以證券集中保管事業保管之有價證券為設質標的者，其設質之交付，得以帳簿劃撥方式為之，並不適用民法第九百零八條之規定。證券集中保管事業以混合保管方式保管之有價證券，由所有人按其送存之種類數量分別共有；領回時，並得以同種類、同數量之有價證券返還之。證券集中保管事業為處理保管業務，得就保管之股票、公司債以該證券集中保管事業之名義登載於股票發行公司股東名簿或公司債存根簿。證券集中保管事業於股票、公司債發行公司召開股東會、債權人會議，或決定分派股息及紅利或其他利益，或還本付息前，將所保管股票及公司債所有人之本名或名稱、住所或居所及所持有數額通知該股票及公司債之發行公司時，視為已記載於公司股東名簿、公司債存根簿或已將股票、公司債交存公司，不適用公司法第一百六十五條第一項、第一百七十六條、第二百六十條及第二百六十三條第三項之規定。前二項規定於政府債券及其他有價證券準用之。
 
-> 釋：一、第四項新增，明定證券集中保管事業對混合保管有價證券所有權之歸屬理均應先經主管機關之核准始得為之。二、集中保管事業所保管有價證券，除股票之過戶有排除公司法第一百六十五條第一項及第一百七十六條規定之必要外，公司債納入集中保管後，其過戶亦須排除公司法第二百六十條及第二百六十三條第三項規定，爰修正第四項，移列為第五項。另增列證券集中保管事業就集中保管之股票得以自己名義登載於股東名簿；另集中保管事業於股票發行公司召開股東會或決定分派權息前，應依本項規定通知該發行公司，俾發行公司得據以通知股票所有人行使股權；有關公債之銷除前手及過戶事項亦有適用擬制人名義作法之必要，併規定於本項。
+> 釋：一、查上市、上櫃公司有價證券之交易，係透過集中交易市場之券商，買賣雙方不得以私下約定方式來進行，必須透過券商之機制進行有價證券之給付、交割，目的是維持證券市場交易秩序。二、若非屬上市、上櫃之公司，其彼此間股份買賣純屬個人間交易，不致影響公眾市場機制，也不致損及任何第三人，應不必受現款、現貨之拘束，只要雙方達成協議即可。三、本次公司法修正中對於股票、公司債已引入無實體交易制度，未來證券之給付及交割並不需以現款、現貨為之。
 
 * 43.1 任何人單獨或與他人共同取得任一公開發行公司已發行股份總額超過百分之十之股份者，應於取得後十日內，向主管機關申報其取得股份之目的、資金來源及主管機關所規定應行申報之事項；申報事項如有變動時，並隨時補正之。不經由有價證券集中交易市場或證券商營業處所，對非特定人公開收購公開發行公司之有價證券者，非經主管機關核准，不得為之。前項公開收購公開發行公司有價證券管理辦法，由主管機關定之。
 
@@ -356,7 +358,9 @@
 
 * 112 會員退會或被停止買賣時，證券交易所應依章程之規定，責令本人或指定其他會員了結其於有價證券集中交易市場所為之買賣，其本人於了結該買賣目的範圍內，視為尚未退會，或未被停止買賣。依前項之規定，經指定之其他會員於了結該買賣目的範圍內，視為與本人間已有委任契約之關係。
 
-* 113 會員制證券交易所至少應置董事三人，監事一人，依章程之規定，由會員選任之。但董事中至少應有三分之一就非會員之有關專家中選任之。董事、監事之任期均為三年，連選得連任。董事應組織董事會，由董事過半數之同意，就非會員董事中選任一人為董事長。董事長應為專任。但交易所設有其他全權主持業務之經理人者，不在此限。
+* 113 會員制證券交易所至少應置董事三人，監事一人，依章程之規定，由會員選任之。但董事中至少應有三分之一，監事至少應有一人就非會員之有關專家中選任之。董事、監事之任期均為三年，連選得連任。董事應組織董事會，由董事過半數之同意，就非會員董事中選任一人為董事長。董事長應為專任。但交易所設有其他全權主持業務之經理人者，不在此限。第一項之非會員董事及監事之選任標準及辦法，由主管機關定之。
+
+> 釋：證券交易所為證券集中交易市場之核心，其功能為建立集中交易市場之運作及交易秩序之維護，具有公益性質。應由社會公正專業人士參與或監督交易所業務之執行。監事部份亦應同時給予機會。但為求公正、客觀、超然，避免政治酬庸致生流弊，主管機關應訂立公益董監事之選任標準及辦法，以昭公信。
 
 * 114 第五十三條之規定，於會員制證券交易所之董事、監事或經理人準用之。董事、監事或經理人違反前項之規定者，當然解任。
 
@@ -382,9 +386,9 @@
 
 * 125 公司制證券交易所章程，除依公司法規定者外，並應記載左列事項：一、在交易所集中交易之經紀商或自營商之名額及資格。二、存續期間。前項第二款之存續期間，不得逾十年。但得視當地證券交易發展情形，於期滿三個月前，呈請主管機關核准延長之。
 
-* 126 證券商之董事、監察人、股東或受僱人不得為公司制證券交易所之經理人。公司制證券交易所之董事及監察人至少應有三分之一，由主管機關指派非股東之有關專家任之；不適用公司法第一百九十二條第一項及第二百十六條第一項之規定。
+* 126 證券商之董事、監察人、股東或受僱人不得為公司制證券交易所之經理人。公司制證券交易所之董事、監察人至少應有三分之一，由主管機關指派非股東之有關專家任之；不適用公司法第一百九十二條第一項及第二百十六條第一項之規定。前項之非股東董事、監察人之選任標準及辦法，由主管機關定之。
 
-> 釋：為配合第一百二十八條之修正，證券商得購買公司制證券交易所股份，因此一投資關係，宜放寬使其得兼任證券交易所之董事、監察人，但為避免因執行業務之利害衝突，及貫徹專職經營之原則，故證券交易所之經理人仍不得兼任。爰修正第一項。
+> 釋：證券交易所為證券集中交易市場之核心，其功能為建立集中交易市場之運作及交易秩序之維護，具有公益性質。應由社會公正專業人士參與或監督交易所業務之執行。但為求公正、客觀、超然，避免政治酬庸致生流弊，主管機關應訂立公益董監事之選任標準及辦法，以昭公信。
 
 * 127 公司制證券交易所發行之股票，不得於自己或他人開設之有價證券集中交易市場，上市交易。
 
@@ -522,9 +526,9 @@
 
 > 釋：一、第七十四條及第八十四條均屬行政上消極防弊規定，無處刑罰之必要，宜改為行政罰。二、為符合刑罰條文在前，行政罰條文在後之體例，本條移列為第一百七十七條之一，本條刪除。
 
-* 177 有左列情事之一者，處一年以下有期徒刑、拘役或科或併科新臺幣一百二十萬元以下罰金：一、違反第三十一條第一項、第三十四條、第四十條、第四十一條、第四十五條、第四十六條、第五十條第二項、第一百十九條、第一百二十八條、第一百五十條或第一百六十五條之規定者。二、違反主管機關依第六十一條所為之規定者。
+* 177 有左列情事之一者，處一年以下有期徒刑、拘役或科或併科新臺幣一百二十萬元以下罰金：一、違反第三十一條第一項、第三十四條、第四十條、第四十五條、第四十六條、第五十條第二項、第一百十九條、第一百二十八條、第一百五十條或第一百六十五條之規定者。二、違反主管機關依第六十一條所為之規定者。
 
-> 釋：一、罰金刑修正為以新臺幣為單位。另由於違反本法之犯罪者，往往多屬於嚴重之經濟犯罪，參照過去執行案例實務，低額罰金顯不足以收嚇阻之效，故參酌銀行法提高罰金刑之幅度，將最高刑度提高。二、第三款為一概括規定，牴觸罪刑法定主義，且主管機關所發布之行政命令何其多，一旦違反就要科以刑責，顯然嚴重侵害人權，違反憲法保障人權之規定故予刪除。
+> 釋：由於公開發行公司必須依證券交易法第三十六條第一項第一款規定公告並申報經會計師查核簽證之財務報告。又證券交易法第三十七條規定會計師辦理前條財務報告查核簽證，應經主管機關之核准，既然財務報告必須經會計師查核簽證，又應經主管機關之核准，若再科以刑罰規範，無異是畫蛇添足。爰刪除第四十一條。
 
 * 177.1 違反第七十四條或第八十四條之規定者，處相當於所取得有價證券價金額以下之罰鍰。但不得少於新臺幣十二萬元。
 
