中華民國刑法 2002.1.8

--- a/司法-刑事/中華民國刑法.md
+++ b/司法-刑事/中華民國刑法.md
@@ -824,23 +824,33 @@
 
 * 327 以犯第三百二十五條第一項之罪為常業者，處三年以上、十年以下有期徒刑。
 
-* 328 意圖為自己或第三人不法之所有，以強暴、脅迫、藥劑、催眠術或他法，至使不能抗拒，而取他人之物或使其交付者，為強盜罪，處三年以上、十年以下有期徒刑。以前項方法得財產上不法之利益或使第三人得之者亦同。犯強盜罪因而致人於死者，處死刑或無期徒刑；致重傷者，處無期徒刑或七年以上有期徒刑。第一項及第二項之未遂犯罰之。預備犯強盜罪者，處一年以下有期徒刑、拘役或三百元以下罰金。
+* 328 意圖為自己或第三人不法之所有，以強暴、脅迫、藥劑、催眠術或他法，至使不能抗拒，而取他人之物或使其交付者，為強盜罪，處五年以上有期徒刑。以前項方法得財產上不法之利益或使第三人得之者，亦同。犯強盜罪因而致人於死者，處死刑、無期徒刑或十年以上有期徒刑；致重傷者，處無期徒刑或七年以上有期徒刑。第一項及第二項之未遂犯罰之。預備犯強盜罪者，處一年以下有期徒刑、拘役或三千元以下罰金。
+
+> 釋：一、第一項規定之法定刑，與陸海空軍刑法及懲治盜匪條例之規定相差懸殊，不足以遏阻犯罪。因應懲治盜匪條例之廢止，酌予提高法定刑為五年以上有期徒刑。二、為使法官在斟酌強盜罪的加重結果犯是致人於死或故殺人有所區別，故將第三項的法定刑，修正為處「死刑、無期徒刑或十年以上有期徒刑」。如此，使致人於死和故意殺人的刑度有所區別。三、第五項僅修正罰金額。
 
 * 329 竊盜或搶奪，因防護贓物、脫免逮捕或湮滅罪證、而當場施以強暴、脅迫者，以強盜論。
 
-* 330 犯強盜罪而有第三百二十一條第一項各款情形之一者，處五年以上、十二年以下有期徒刑。前項之未遂犯罰之。
+* 330 犯強盜罪而有第三百二十一條第一項各款情形之一者，處七年以上有期徒刑。前項之未遂犯罰之。
 
-* 331 以犯強盜罪為常業者，處七年以上有期徒刑。
+> 釋：懲治盜匪條例第三條第一項第三款對於聚眾強劫而執持槍械或爆裂物者處罰甚重，以其對社會造成之危害及危險甚鉅。而刑法第三百三十條之規定雖能賅括懲治盜匪匪條例前開規定之含意，但處罰太輕，因應懲治盜匪條例之廢止，及配合本法第三百二十八條第一項之修正，酌予提高其法定刑。
 
-* 332 犯強盜罪而有左列行為之一者，處死刑或無期徒刑：一、放火者。二、強制性交者。三、擄人勒贖者。四、故意殺人者。
+* 331 以犯第三百二十八條或第三百三十條之罪為常業者，處十年以上有期徒刑。
 
-> 釋：原條文第二款「強姦」修改為「強制性交」。
+> 釋：一、本條原規定「犯強盜罪」，修正為「以犯第三百二十八條或第三百三十條之罪為常業者」，以資明確。二、懲治盜匪條例無對應之規定。因應其他強盜罪相關規定法定刑之提高，原條文所定之法定刑相較自屬偏低，爰提高為十年以上有期徒刑，並配合本法第三百二十八條及第三百三十條之修正。
+
+* 332 犯強盜罪而故意殺人者，處死刑或無期徒刑。犯強盜罪而有下列行為之一者，處死刑、無期徒刑或十年以上有期徒刑：一、放火者。二、強制性交者。三、擄人勒贖者。四、使人受重傷者。
+
+> 釋：一、增訂第一項。二、原第一項移列為第二項。犯強盜罪而故意使人受重傷者，亦屬惡行重大，且懲治盜匪條例第二條第一項第六款原有處罰規定，配合懲治盜匪條例之廢止，爰於第二項增列「使人受重傷者」。
 
 * 333 未受交戰國之允准或不屬於各國之海軍，而駕駛船艦，意圖施強暴、脅迫於他船或他船之人或物者，為海盜罪，處死刑、無期徒刑或七年以上有期徒刑。船員或乘客意圖掠奪財物，施強暴、脅迫於其他船員或乘客，而駕駛或指揮船艦者，以海盜論。因而致人於死者，處死刑；致重傷者，處死刑或無期徒刑。
 
 * 334 犯海盜罪而有左列行為之一者，處死刑：一、放火者。二、強制性交者。三、擄人勒贖者。四、故意殺人者。
 
 > 釋：原條文第二款「強姦」修改為「強制性交」。
+
+* 334.1 第三百二十三條之規定，於本章之罪準用之。
+
+> 釋：一、本條新增。二、增設本條，使本法第三百二十三條之規定，於本章之罪有其適用。
 
 * 335 意圖為自己或第三人不法之所有，而侵占自己持有他人之物者，處五年以下有期徒刑、拘役或科或併科一千元以下罰金。前項之未遂犯罰之。
 
@@ -882,11 +892,17 @@
 
 * 346 意圖為自己或第三人不法之所有，以恐嚇使人將本人或第三人之物交付者，處六月以上、五年以下有期徒刑，得併科一千元以下罰金。以前項方法得財產上不法之利益或使第三人得之者亦同。前二項之未遂犯罰之。
 
-* 347 意圖勒贖而擄人者，處死刑、無期徒刑或七年以上有期徒刑。因而致人於死或重傷者，處死刑或無期徒刑。第一項之未遂犯罰之。預備犯第一項之罪者，處二年以下有期徒刑。犯第一項之罪，未經取贖而釋放被害人者，得減輕其刑。
+* 347 意圖勒贖而擄人者，處死刑、無期徒刑或七年以上有期徒刑。因而致人於死者，處死刑、無期徒刑或十二年以上有期徒刑；致重傷者，處死刑、無期徒刑或十年以上有期徒刑。第一項之未遂犯罰之。預備犯第一項之罪者，處二年以下有期徒刑。犯第一項之罪，未經取贖而釋放被害人者，減輕其刑；取贖後而釋放被害人者，得減輕其刑。
 
-* 348 犯前條第一項之罪而故意殺被害人者，處死刑。犯前條第一項之罪而對被害人強制性交者，處死刑或無期徒刑。
+> 釋：一、將第二項「因而致人於死者」及「致重傷者」，分別處罰。二、因為擄人勒贖係屬一種非常惡劣的罪行，本應從重量刑，但為顧及被害人的人身安全，同時也希望犯罪人能心存慈悲，有所悔悟，而主動釋放被害人，免生「撕票」的悲劇，以保護被害人的人身安全，故而只要擄人勒贖後，不論是否取贖，如釋放被害人，均得減輕其刑，至於已經取贖之刑度如何減輕，則歸由法官去裁量。
 
-> 釋：原條文第二項「強姦」修改為「強制性交」。
+* 348 犯前條第一項之罪而故意殺人者，處死刑或無期徒刑。犯前條第一項之罪而有下列行為之一者，處死刑、無期徒刑或十二年以上有期徒刑：一、強制性交者。二、使人受重傷者。
+
+> 釋：參酌本法第三百三十二條第二項之規定，於第二項增訂犯擄人勒贖而使被害人受重傷之結合犯之處罰規定，以求刑罰之公平。
+
+* 348.1 擄人後意圖勒贖者，以意圖勒贖而擄人論。
+
+> 釋：一、本條新增。二、擄人後而起意勒贖者，其情節與意圖勒贖而擄人相若。增設本條以意圖勒贖而擄人論之規定，俾能依本法第三百四十七條及第三百四十八條之規定處罰。
 
 * 349 收受贓物者，處三年以下有期徒刑、拘役或五百元以下罰金。搬運、寄藏、故買贓物或為牙保者，處五年以下有期徒刑、拘役或科或併科一千元以下罰金。因贓物變得之財物，以贓物論。
 
