軍事審判法 2002.1.8

--- a/行政-國防/軍事審判法.md
+++ b/行政-國防/軍事審判法.md
@@ -438,13 +438,17 @@
 
 > 釋：一、條次變更，本條為原條文第一百十五條移列。二、配合章節之調整，作文字修正。
 
-* 111 搜索應用搜索票。搜索票應記載下列事項：一、應搜索之被告或應扣押之物。二、應加搜索之處所、身體或物件。搜索票，於偵查中由軍事檢察官簽名，審判中由審判長或受命軍事審判官簽名。搜索除由軍事檢察官或軍事審判官親自實施外，由軍法警察或軍法警察官執行。
+* 111 搜索，應用搜索票。搜索票，應記載下列事項：一、案由。二、應搜索之被告、犯罪嫌疑人或應扣押之物。但被告或犯罪嫌疑人不明時，得不予記載。三、應加搜索之處所、身體、物件或電磁紀錄。四、有效期間，逾期不得執行搜索及搜索後應將搜索票交還之意旨。搜索票，由軍事審判官簽名。軍事審判官並得於搜索票上對執行人員為適當之指示。核發搜索票之程序，不公開之。搜索，除由軍事檢察官或軍事審判官親自實施外，由軍法警察官或軍法警察執行。
 
-> 釋：一、條次變更，本條為原條文第一百十六條移列。二、配合軍法機關改採地區制，將原條文第一項後段「於呈准軍事審判機關長官後行之」之規定刪除。三、參照刑事訴訟法第一百二十八條規定，增訂搜索票應記載事項為第二項，搜索票簽發權責為第三項。四、原條文第二項未修正，移列第四項。五、原條文第三項、第四項移列第一百十四條第一項、第二項。
+> 釋：一、依據刑事訴訟法第一百二十八條修正意旨，作部分文字修正。二、增列第五項，參照刑事訴訟法第一百二十八條之二第一項，規定搜索之實施及執行主體。
 
-* 112 執法官兵、軍法警察或軍法警察官逮捕被告或執行拘提、羈押時，雖無搜索票，得逕行搜索其身體。有下列情形之一者，軍法警察官或軍法警察雖無搜索票，得逕行搜索住宅或其他之處所：一、因逮捕被告或執行拘提、羈押者。二、因追躡現行犯或逮捕脫逃人者。三、有事實足信為有人在內犯罪而情形急迫者。前項搜索，應於執行後二十四小時內，報告軍事檢察官或軍事法院。
+* 111.1 偵查中軍事檢察官認有搜索之必要者，除依法得不用搜索票之情形外，應以書面記載前條第二項各款之事項，並敘述理由，聲請該管軍事法院核發搜索票。軍法警察官因調查犯罪嫌疑人犯罪情形及蒐集證據，認有搜索之必要時，得依前項規定報請軍事檢察官許可後，向該管軍事法院聲請核發搜索票。前二項之聲請經軍事法院駁回者，不得聲明不服。
 
-> 釋：一、條次變更，本條為原條文第一百十七條移列。二、參照刑事訴訟法第一百二十九條及第一百三十條體例，將原條文不要式搜索區分為人身搜索與住宅搜索，修正為第一項、第二項。三、明定第二項之搜索，應於執行後二十四小時內，報告軍事檢察官或軍事法院，以便審核搜素是否合法及有無濫用權力之情事，增列為第三項。
+> 釋：一、本條新增。二、不要式搜索之種類，除本法第一百十二條第二項「逕行搜索」之外，尚包括「附帶搜索」、「緊急搜索」、「自願性搜索」等，為免掛一漏萬，爰定為「除依法得不用搜索票之情形外」，以資周延。
+
+* 112 軍事檢察官、軍法警察官、軍法警察或執法官兵逮捕被告、犯罪嫌疑人或執行拘提、羈押時，雖無搜索票，得逕行搜索其身體、隨身攜帶之物件、所使用之交通工具及其立即可觸及之處所。有下列情形之一者，軍事檢察官、軍法警察官、軍法警察雖無搜索票，得逕行搜索住宅或其他處所：一、因逮捕被告、犯罪嫌疑人或執行拘提、羈押者。二、因追躡現行犯或逮捕脫逃人者。三、有事實足信為有人在內犯罪而情形急迫者。軍事檢察官於偵查中有相當理由認為情況急迫，非迅速搜索，證據有偽造、變造、湮滅或隱匿之虞者，得逕行搜索，或指揮軍法警察官、軍法警察或執法官兵執行搜索。前二項搜索，由軍事檢察官為之者，應於實施後三日內陳報該管軍事法院；由軍法警察官、軍法警察或執法官兵為之者，應於執行後三日內報告該管軍事法院檢察署軍事檢察官及軍事法院。軍事法院認為不應准許者，得於三日內撤銷之。
+
+> 釋：一、第一項依據刑事訴訟法第一百三十條意旨修正。二、第二、三、四項依據刑事訴訟法第一百三十一條意旨修正。三、第一、二項均漏列「軍事檢察官」，補列之。
 
 * 113 政府機關、公務員或曾為公務員之人所持有或保管之文書及其他物件應扣押者，應請求交付。但於必要時得搜索之。前項情形，如為其職務上應守秘密者，非經該管監督機關或公務員允許，不得扣押。前項允許，除有妨害國家之利益者外，不得拒絕。
 
@@ -854,9 +858,9 @@
 
 > 釋：一、條次變更，本條為原條文第二百二十四條移列。二、將「軍事審判機關」修正為「軍事法院」。
 
-* 215 對於審判長、受命軍事審判官、受託軍事審判官或軍事檢察官所為下列之處分有不服者，得聲請其所屬或該管軍事法院撤銷或變更之：一、關於羈押、具保、責付、限制住居、扣押或扣押物發還及因鑑定將被告送入醫院或其他處所之處分。二、對於證人、鑑定人或通譯科罰鍰之處分。三、關於搜索者。前項聲請期間為五日，自為處分之日起算，其為送達者，自送達後起算。第二百零九條至第二百十三條之規定，於本條準用之。第六十五條第一項之規定，於聲請撤銷或變更受託軍事審判官之裁定者，準用之。
+* 215 對於審判長、受命軍事審判官、受託軍事審判官或軍事檢察官所為下列之處分有不服者，受處分人得聲請其所屬或該管軍事法院撤銷或變更之：一、關於羈押、具保、責付、限制住居、搜索、扣押或扣押物發還、因鑑定將被告送入醫院或其他處所、及對被告所為禁止接見、通信、受授物件或扣押之處分。二、對於證人、鑑定人或通譯科罰鍰之處分。前項之搜索、扣押經撤銷者，審判時該管軍事法院或法院得宣告所扣得之物，不得作為證據。第一項聲請期間為五日，自為處分之日起算，其為送達者，自送達後起算。第二百十一條至第二百十三條之規定，於本條準用之。第六十五條第一項之規定，於聲請撤銷或變更受託軍事審判官之裁定者，準用之。
 
-> 釋：一、條次變更，本條為原條文第二百二十五條移列。二、第一項增列「受託軍事審判官」，另將「軍事審判機關」修正為「軍事法院」，並作文字修正。三、參照刑事訴訟法第四百十六條之體例：（一）將第一款、第二款合併，並增列「限制住居」及「鑑定送醫」等處分。（二）增訂第二款，賦予證人等聲請權。（三）增訂第二項、第四項，並將原條文第二百二十六條移列為第三項，另調整所引條次，以期完備。
+> 釋：一、第一項之本文增訂「受處分人」，以資明確；第三款併入第一款；參照刑事訴訟法第一百零五條第三項、第四項之規定，增列對被告所為禁止接見、通信、受授物件或扣押之處分有不服者，受處分人亦有法律救濟之機會。二、增列第二項。三、原第二項移列第三項，條文中之「前項」修正為「第一項」。四、原第三項移列第四項。另將條文中之「第二百零九條」修正為「第二百十一條」。按準抗告係由原審軍事法院（合議庭）審理，不必送交上級審，目的在簡化其處理程序，故刑事訴訟法之準抗告，其第四百十六條第四項並未將同法第四百零七條及第四百零八條（亦即原審法院對抗告案件之初步審查）列入準用條文，因此不必由原為處分之審判長等人先為初步審查，惟參照刑事訴訟法第四百十六條第四項訂定之本法第二百十五條第三項條文，卻贅列與刑事訴訟法第四百零七條及第四百零八條規範內容相同之第二百零九條及第二百十條條文，不符迅捷之要求，為使本法與刑事訴訟法關於不服「強制處分」之救濟程序一致，及避免作成「強制處分」之原審判長、受命軍事審判官或受託軍事審判官存有成見，逕自駁回其認為不合法之準抗告聲請（應係將之送交準抗告軍事法院，即原審軍事法院合議庭處置），爰予修正。
 
 * 216 軍事法院就前條第一項聲請撤銷或變更之裁定，不得抗告。但對於其就撤銷罰鍰之聲請而為者，得提起抗告。依本編規定得提起抗告，而誤為撤銷或變更之聲請者，視為已提抗告；其得為撤銷或變更之聲請而誤為抗告者，視為已有聲請。
 
