證券交易法 2002.1.15

--- a/行政-財政及金融/證券交易法.md
+++ b/行政-財政及金融/證券交易法.md
@@ -14,9 +14,9 @@
 
 > 釋：一、配合主管機關改隸，爰修正第一項。二、為配合有價證券無實體發行制度之建立，及為避免無實體發行以帳簿劃撥登錄，因未印製實體有價證券，是否屬有價證券之爭議，爰將有價證券無實體發行以帳簿劃撥登錄，未印製實體有價證券者，亦規定視為有價證券，以杜爭議，爰增訂第三項。
 
-* 7 本法所稱募集，謂發起人於公司成立前或發行公司於發行前，對非特定人公開招募股份或公司債之行為。
+* 7 本法所稱募集，謂發起人於公司成立前或發行公司於發行前，對非特定人公開招募有價證券之行為。本法所稱私募，謂已依本法發行股票之公司依第四十三條之六第一項及第二項規定，對特定人招募有價證券之行為。
 
-> 釋：依公司法第一百五十六條第六項：「同次發行之股份，其發行條件相同者，價格應歸一律。」並未限制不得以「非同一之條件」發行，本條現行規定限制「以同一之條件」，則發行人如以「非同一之條件」發行，即非屬本法之募集，而可規避本法之管理。該要件之列入，顯屬多餘且不妥，爰予刪除。
+> 釋：一、考量原條文之股份或公司債不足涵括有價證券，且因私募之標的為有價證券，爰配合修正。二、為建立我國私募制度，明定其定義，另為使公募與私募之定義在同一法條規範，以臻明確，爰增列第二項。
 
 * 8 本法所稱發行，謂發行人於募集後製作並交付，或以帳簿劃撥方式交付有價證券之行為。前項以帳簿劃撥方式交付有價證券之發行，得不印製實體有價證券。
 
@@ -64,15 +64,15 @@
 
 * 19 凡依本法所訂立之契約，均應以書面為之。
 
-* 20 有價證券之募集、發行或買賣，不得有虛偽、詐欺或其他足致他人誤信之行為。發行人申報或公告之財務報告及其他有關業務文件，其內容不得有虛偽或隱匿之情事。違反前二項規定者，對於該有價證券之善意取得人或出賣人因而所受之損害，應負賠償之責。委託證券經紀商以行紀名義買入或賣出之人，視為前項之取得人或出賣人。
+* 20 有價證券之募集、發行、私募或買賣，不得有虛偽、詐欺或其他足致他人誤信之行為。發行人申報或公告之財務報告及其他有關業務文件，其內容不得有虛偽或隱匿之情事。違反前二項規定者，對於該有價證券之善意取得人或出賣人因而所受之損害，應負賠償之責。委託證券經紀商以行紀名義買入或賣出之人，視為前項之取得人或出賣人。
 
-> 釋：一、有價證券之募集、發行或買賣行為，係屬相對，當事人雙方均有可能因受對方或第三人之虛偽、詐欺或其他足致他人誤信之行為而遭受損失。本條第一項現行規定文義僅限於「募集、發行或買賣有價證券者」不得有虛偽、詐欺或其他足致他人誤信之行為，未包括「第三人」顯欠周密，爰將「募集、發行或買賣有價證券者」等文字，修正為「有價證券之募集、發行或買賣」，俾資涵蓋第三人。二、第二項新增。對發行人應編送主管機關之財務報告或其他有關業務文件，有虛偽之記載情事者，依第一百七十四條僅規定刑事責任，對善意之有價證券取得人或出買人並無實益，爰增訂第二項。三、現行第二項改為第三項。四、第四項新增。依本法第十五條及第十六條證券經紀商受託買賣有價證券可以「行紀」與「居間」方式為之，其以「行紀」受託買賣者（證券集中交易市場屬之），買賣直接當事人為證券經紀商，並非委託人，若買賣有虛偽、詐欺等情事而符合本條之要件時，委託人欲提出賠償之訴，並不能逕行向侵權行為人請求，而須透過受託證券經紀商輾轉向侵權行為人請求，致權利之行使程序，顯過於繁雜，爰增訂第四項。
+> 釋：有價證券之私募及再行賣出仍不得為虛偽隱匿不實之情事，爰修正第一項；違反者適用第一百七十一條之罰則。至於私募涉有背信情事，依刑法第三百四十二條之規定處罰。
 
 * 21 本法規定之損害賠償請求權，自有請求權人知有得受賠償之原因時起二年間不行使而消滅；自募集、發行或買賣之日起逾五年者亦同。
 
-* 22 有價證券之募集與發行，除政府債券或經財政部核定之其他有價證券外，非經主管機關核准或向主管機關申報生效後，不得為之；其處理準則由主管機關定之。已依本法發行股票之公司，於依公司法之規定，發行新股而可不公開發行者，仍應依前項之規定辦理。第一項規定於出售所持有之公司股票、公司債券或其價款繳納憑證、表明其權利之證書或新股認購權利證書、新股權利證書，而對非特定人公開招募者，準用之。
+* 22 有價證券之募集與發行，除政府債券或經財政部核定之其他有價證券外，非經主管機關核准或向主管機關申報生效後，不得為之；其處理準則，由主管機關定之。已依本法發行股票之公司，於依公司法之規定發行新股時，除依第四十三條之六第一項及第二項規定辦理者外，仍應依前項之規定辦理。第一項規定於出售所持有之公司股票、公司債券或其價款繳納憑證、表明其權利之證書或新股認購權利證書、新股權利證書，而對非特定人公開招募者，準用之。
 
-> 釋：一、證券市場已建立二十五年，公開發行公司與市場交易量質隨著國家經濟成長而逐日增加，對於善意之有價證券取得人或出賣人因而所受之損害，應負賠償之責等改進措施，對部分得簡化審核程序之募集與發行，可採行美、日等國申報生效制，以增進募集與發行之時效，爰將現行審核制，修正兼採審核與申報制。二、第二項酌作文字修正。三、第三項新增。目前實務上發生甚多將所持有之公司股票、公司債券或其價款繳納憑證、表彰其權利之證書或新股認購權利證書、新股權利證書，對非特定人公開招募以出售該等證券之情形，因其既非現行第七條、第八條所稱之募集或發行，致無從依本法有關規定加以有效之管理，以該等行為係向非特定人公開招募，影響層面甚廣，為維護公益及保障投資人利益計，爰參考美、日立法例（美國證券交易法第三條第一項第八款、日本證券交易法第二條第五款、第二十七條），增訂本項。
+> 釋：為立我國私募制度，修正第二項，對於符合第四十三條之六第一項及第二項之規定辦理者，排除私募之有價證券須報經主管機關申請核准或申報生效之規定。
 
 * 22.1 已依本法發行股票之公司，於增資發行新股時，主管機關得規定其股權分散標準。公開發行股票公司股務處理準則，由主管機關定之。
 
@@ -176,9 +176,37 @@
 
 > 釋：一、查上市、上櫃公司有價證券之交易，係透過集中交易市場之券商，買賣雙方不得以私下約定方式來進行，必須透過券商之機制進行有價證券之給付、交割，目的是維持證券市場交易秩序。二、若非屬上市、上櫃之公司，其彼此間股份買賣純屬個人間交易，不致影響公眾市場機制，也不致損及任何第三人，應不必受現款、現貨之拘束，只要雙方達成協議即可。三、本次公司法修正中對於股票、公司債已引入無實體交易制度，未來證券之給付及交割並不需以現款、現貨為之。
 
-* 43.1 任何人單獨或與他人共同取得任一公開發行公司已發行股份總額超過百分之十之股份者，應於取得後十日內，向主管機關申報其取得股份之目的、資金來源及主管機關所規定應行申報之事項；申報事項如有變動時，並隨時補正之。不經由有價證券集中交易市場或證券商營業處所，對非特定人公開收購公開發行公司之有價證券者，非經主管機關核准，不得為之。前項公開收購公開發行公司有價證券管理辦法，由主管機關定之。
+* 43.1 任何人單獨或與他人共同取得任一公開發行公司已發行股份總額超過百分之十之股份者，應於取得後十日內，向主管機關申報其取得股份之目的、資金來源及主管機關所規定應行申報之事項；申報事項如有變動時，並隨時補正之。不經由有價證券集中交易市場或證券商營業處所，對非特定人為公開收購公開發行公司之有價證券者，除左列情形外，應先向主管機關申報並公告後，始得為之：一、公開收購人預定公開收購數量，加計公開收購人與其關係人已取得公開發行公司有價證券總數，未超過該公開發行公司已發行有表決權股份總數百分之五。二、公開收購人公開收購其持有已發行有表決權股份總數超過百分之五十之公司之有價證券。三、其他符合主管機關所定事項。任何人單獨或與他人共同預定取得公開發行公司已發行股份總額達一定比例者，除符合一定條件外，應採公開收購方式為之。依第二項規定收購有價證券之範圍、條件、期間、關係人及申報公告事項與前項之一定比例及條件，由主管機關定之。
 
-> 釋：一、本條新增。二、美國證券交易法第十三條第四項之規定，任何人單獨或與他人共同取得某一證券超過發行股數百分之五者，應於取得後十日內向證券交易所、發行公司、證管會等提出說明書，說明其資金、取得證券之目的、取得人之背景等資料，用使主管機關及投資人能了解公司股權大量變動之來由及其趨向，亦是「完全公開」原則之發揮。
+> 釋：一、為符合外國立法之趨勢，將公開收購制度由核准制改為申報制，並將收購數量不致於影響公司經營權變動者予以豁免，修正第二項。二、為避免大量收購有價證券致影響個股市場之價格，納入強制公開收購之規定，增列第三項。三、增列第四項，授權主管機關訂定相關子法予以規範。
+
+* 43.2 公開收購人應以同一收購條件為公開收購，且不得為左列公開收購條件之變更：一、調降公開收購價格。二、降低預定公開收購有價證券數量。三、縮短公開收購期間。四、其他經主管機關規定之事項。違反前項應以同一收購條件公開收購者，公開收購人應於最高收購價格與對應賣人公開收購價格之差額乘以應募股數之限額內，對應賣人負損害賠償責任。
+
+> 釋：一、本條新增。二、為維護應賣人之權益，第一項規範公開收購之條件應歸一致，且條件之變更若不利於應賣人，不得為之。三、第二項規範公開收購人違反收購條件一致規定之民事賠償責任。
+
+* 43.3 公開收購人及其關係人自申報並公告之日起至公開收購期間屆滿日止，不得於集中交易市場、證券商營業處所、其他任何場所或以其他方式，購買同種類之公開發行公司有價證券。違反前項規定者，公開收購人應就另行購買有價證券之價格與公開收購價格之差額乘以應募股數之限額內，對應賣人負損害賠償責任。
+
+> 釋：一、本條新增。二、為維護應賣人之權益，第一項規範公開收購人及其關係人於申報並公告日起至公開收購期間屆滿日止，僅得以公開收購方式購買該有價證券。三、第二項明定公開收購人違反前項規定之民事賠償責任。
+
+* 43.4 公開收購人除依第二十八條之二規定買回本公司股份者外，應於應賣人請求時或應賣人向受委任機構交存有價證券時，交付公開收購說明書。前項公開收購說明書，其應記載之事項，由主管機關定之。第三十一條第二項及第三十二條之規定，於第一項準用之。
+
+> 釋：一、本條新增。二、為使公開收購人充分揭露資訊並使應賣人得以瞭解相關事宜，第一項明定交付公開收購說明書之義務。三、第二項明定公開說明書之記載事項授權主管機關訂定。四、第三項明定公開收購人未交付公開收購說明書及其內容有虛偽或隱匿情事，準用法條之民事賠償責任。
+
+* 43.5 公開收購人進行公開收購後，除有左列情事之一，並經主管機關核准者外，不得停止公開收購之進行：一、被收購有價證券之公開發行公司，發生財務、業務狀況之重大變化，經公開收購人提出證明者。二、公開收購人破產、死亡、受禁治產宣告或經裁定重整者。三、其他經主管機關所定之事項。公開收購人所申報及公告之內容有違反法令規定之情事者，主管機關為保護公益之必要，得命令公開收購人變更公開收購申報事項，並重行申報及公告。公開收購人未於收購期間完成預定收購數量或經主管機關核准停止公開收購之進行者，除有正當理由並經主管機關核准者外，公開收購人於一年內不得就同一被收購公司進行公開收購。公開收購人與其關係人於公開收購後，所持有被收購公司已發行股份總數超過該公司已發行股份總數百分之五十者，得以書面記明提議事項及理由，請求董事會召集股東臨時會，不受公司法第一百七十三條第一項規定之限制。
+
+> 釋：一、本條新增。二、明定公開收購申報後，公開收購人應依申報內容進行收購，收購人不得任意停止公開收購之進行。三、為配合由核准制改為申報制而調整管理之機制，爰參酌第一百五十六條規範之精神，增訂第二項。四、為避免公開收購人以公開收購之名行影響市場之實，爰參酌香港立法例，增訂第三項。五、增列第四項明定公開收購人與其關係人於公開收購後所持有被收購公司已發行股份總數超過該公司已發行股份總數百分之五十者，得請求董事會召集股東臨時會。
+
+* 43.6 公開發行股票之公司，得以有代表已發行股份總數過半數股東之出席，出席股東表決權三分之二以上之同意，對左列之人進行有價證券之私募，不受第二十八條之一、第一百三十九條第二項及公司法第二百六十七條第一項至第三項規定之限制：一、銀行業、票券業、信託業、保險業、證券業或其他經主管機關核准之法人或機構。二、符合主管機關所定條件之自然人、法人或基金。三、該公司或其關係企業之董事、監察人及經理人。前項第二款及第三款之應募人總數，不得超過三十五人。普通公司債之私募，其發行總額，除經主管機關徵詢目的事業中央主管機關同意者外，不得逾全部資產減去全部負債餘額之百分之四百，不受公司法第二百四十七條規定之限制。並得於董事會決議之日起一年內分次辦理。該公司應第一項第二款之人之合理請求，於私募完成前負有提供與本次有價證券私募有關之公司財務、業務或其他資訊之義務。該公司應於股款或公司債等有價證券之價款繳納完成日起十五日內，檢附相關書件，報請主管機關備查。依第一項規定進行有價證券之私募者，應在股東會召集事由中列舉並說明左列事項，不得以臨時動議提出：一、價格訂定之依據及合理性。二、特定人選擇之方式。其已洽定應募人者，並說明應募人與公司之關係。三、辦理私募之必要理由。依第一項規定進行有價證券私募，並依前項各款規定於該次股東會議案中列舉及說明分次私募相關事項者，得於該股東會決議之日起一年內，分次辦理。
+
+> 釋：一、本條新增。二、有價證券之私募，因排除原股東及員工優先認購權利，涉及股東權益，爰明定應經股東會之決議同意，並應於股東會召集事由列舉說明相關事項，不得以臨時動議提出。另由於公司債之募集依公司法第二百四十六條規定，僅需經由董事會決議通過，為求簡便，增訂公司債之私募，得免經股東會決議。
+
+* 43.7 有價證券之私募及再行賣出，不得為一般性廣告或公開勸誘之行為。違反前項規定者，視為對非特定人公開招募之行為。
+
+> 釋：一、本條新增。二、有價證券之私募及再行賣出不得為一般性廣告或公開勸誘之行為；違反者，視為對非特定人公開招募之行為。
+
+* 43.8 有價證券私募之應募人及購買人除有左列情形外，不得再行賣出：一、第四十三條之六第一項第一款之人持有私募有價證券，該私募有價證券無同種類之有價證券於證券集中交易市場或證券商營業處所買賣，而轉讓予具相同資格者。二、自該私募有價證券交付日起滿一年以上，且自交付日起第三年期間內，依主管機關所定持有期間及交易數量之限制，轉讓予符合第四十三條之六第一項第一款及第二款之人。三、自該私募有價證券交付日起滿三年。四、基於法律規定所生效力之移轉。五、私人間之直接讓受，其數量不超過該證券一個交易單位，前後二次之讓受行為，相隔不少於三個月。六、其他經主管機關核准者。前項有關私募有價證券轉讓之限制，應於公司股票以明顯文字註記，並於交付應募人或購買人之相關書面文件中載明。
+
+> 釋：一、本條新增。二、為避免私募之有價證券透過轉讓以規避公開招募程序之適用，爰參酌美國私募制度，訂定私募有價證券得再轉讓之條件；又為使投資人瞭解私募有價證券轉讓之限制，爰訂定資訊揭露之規範。
 
 * 44 證券商須經主管機關之許可及發給許可證照，方得營業；非證券商不得經營證券業務。證券商分支機構之設立，應經主管機關許可。外國證券商在中華民國境內設立分支機構，應經主管機關許可及發給許可證照。證券商設置標準及管理規則，由主管機關定之。
 
@@ -470,9 +498,9 @@
 
 > 釋：一、增訂第六項。二、規範公司發行具有股權性質之其他有價證券如可轉換公司債等準用本條，以周嚴有價證券之歸入權行使規範。
 
-* 157.1 左列各款之人，獲悉發行股票公司有重大影響其股票價格之消息時，在該消息未公開前，不得對該公司之上市或在證券商營業處所買賣之股票，買入或賣出：一、該公司之董事、監察人及經理人。二、持有該公司股份超過百分之十之股東。三、基於職業或控制關係獲悉消息之人。四、從前三款所列之人獲悉消息者。違反前項規定者，應就消息未公開前其買入或賣出該股票之價格，與消息公開後十個營業日收盤平均價格之差額限度內，對善意從事相反買賣之人負損害賠償責任；其情節重大者，法院得依善意從事相反買賣之人之請求，將責任限額提高至三倍。第一項第四款之人，對於前項損害賠償，應與第一項第一款至第三款提供消息之人，負連帶賠償責任。但第一項第一款至第三款提供消息之人有正當理由相信消息已公開者，不負賠償責任。第一項所稱有重大影響其股票價格之消息，指涉及公司之財務、業務或該證券之市場供求，對其股票價格有重大影響，或對正當投資人之投資決定有重要影響之消息。第二十二條之二第三項之規定，於第一項第一款、第二款準用之；第二十條第四項之規定，於第二項從事相反買賣之人準用之。
+* 157.1 左列各款之人，獲悉發行股票公司有重大影響其股票價格之消息時，在該消息未公開前，不得對該公司之上市或在證券商營業處所買賣之股票或其他具有股權性質之有價證券，買入或賣出：一、該公司之董事、監察人及經理人。二、持有該公司股份超過百分之十之股東。三、基於職業或控制關係獲悉消息之人。四、從前三款所列之人獲悉消息者。違反前項規定者，應就消息未公開前其買入或賣出該證券之價格，與消息公開後十個營業日收盤平均價格之差額限度內，對善意從事相反買賣之人負損害賠償責任；其情節重大者，法院得依善意從事相反買賣之人之請求，將責任限額提高至三倍。第一項第四款之人，對於前項損害賠償，應與第一項第一款至第三款提供消息之人，負連帶賠償責任。但第一項第一款至第三款提供消息之人有正當理由相信消息已公開者，不負賠償責任。第一項所稱有重大影響其股票價格之消息，指涉及公司之財務、業務或該證券之市場供求、公開收購，對其股票價格有重大影響，或對正當投資人之投資決定有重要影響之消息。第二十二條之二第三項之規定，於第一項第一款、第二款準用之；第二十條第四項之規定，於第二項從事相反買賣之人準用之。
 
-> 釋：一、本條新增。二、本法對於股票發行公司內部人員參與公司股票買賣，僅第一百五十七條六個月內短線買賣利益歸入公司或如符合詐欺等要件同一般人交易負本法第二十條及第一百七十一條民刑責任外，對於利用公司未經公開之重要消息買賣公司股票圖利，未明定列為禁止規定，對證券市場之健全發展，構成妨礙，並形成證券管理的一項漏失。三、對利用內部消息買賣公司股票圖利之禁止，已成為世界性之趨勢，美、英、澳、加拿大、菲律賓、新加坡．．．．等國均在其公司法或證券法規明定不得為之，違反者須負民、刑責任。為健全我國證券市場發展，爰增訂本條。
+> 釋：一、鑑於第七條將招募之標的修正為有價證券，且實務上公司內部人等於重大消息未公開前，買賣可轉換公司債等具有股權性質之有價證券均可能構成內線交易，修正第一項，將股票以外具有股權性質之有價證券納入本條規範，並保留彈性以因應新種有價證券不斷推陳出新。二、配合第一項之修正，將第二項民事損害賠償責任額度計算之標的修正為「該證券」。三、按公開收購以高於市價之價格、向不特定人提出收購要約，對於該個股之價格及正當投資人之投資決定具有重大之影響力，爰於第四項明定。
 
 * 158 證券經紀商接受於有價證券集中交易市場為買賣之受託契約，應依證券交易所所訂受託契約準則訂定之。前項受託契約準則之主要內容，由主管機關以命令定之。
 
@@ -514,29 +542,29 @@
 
 > 釋：罰金型修正為以新臺幣為單位。另由於違反本法之犯罪者，往往多屬於嚴重之經濟犯罪，參照過去執行案例實務，低額罰金顯不足以收嚇阻之效，故參酌銀行法提高罰金刑之幅度，將最高刑度提高。
 
-* 174 有左列情事之一者，處五年以下有期徒刑、拘役或科或併科新臺幣二百四十萬元以下罰金：一、於依本法第三十條、第四十四條第一項至第三項或第九十三條規定之申請事項為虛偽之記載者。二、對有價證券之行情或認募核准之重要事項為虛偽之記載而散布於眾者。三、發行人或其負責人、職員有第三十二條第一項之情事，而無同條第二項免責事由者。四、發行人或其關係人、證券商或其委託人、證券商同業公會、證券交易所或第十八條所定之事業，對於主管機關命令提出之帳簿、表冊、文件或其他參考或報告資料之內容有虛偽之記載者。五、發行人、證券商、證券商同業公會、證券交易所或第十八條所定之事業，於依法或主管機關基於法律所發布之命令規定之帳簿、表冊、傳票、財務報告或其他有關業務文件之內容有虛偽之記載者。六、就發行人或某種有價證券之交易，依據不實之資料，作投資上之判斷，而以報刊、文書、廣播、電影或其他方法表示之者。七、會計師或律師，於查核公司有關證券交易之契約、報告書或證明文件時，為不實之簽證者。主管機關對於前項第七款之情事，得予以停止執行簽證工作之處分。
+* 174 有左列情事之一者，處五年以下有期徒刑、拘役或科或併科新臺幣二百四十萬元以下罰金：一、於依第三十條、第四十四條第一項至第三項或第九十三條規定之申請事項為虛偽之記載者。二、對有價證券之行情或認募核准之重要事項為虛偽之記載而散布於眾者。三、發行人或其負責人、職員有第三十二條第一項之情事，而無同條第二項免責事由者。四、發行人、公開收購人或其關係人、證券商或其委託人、證券商同業公會、證券交易所或第十八條所定之事業，對於主管機關命令提出之帳簿、表冊、文件或其他參考或報告資料之內容有虛偽之記載者。五、發行人、公開收購人、證券商、證券商同業公會、證券交易所或第十八條所定之事業，於依法或主管機關基於法律所發布之命令規定之帳簿、表冊、傳票、財務報告或其他有關業務文件之內容有虛偽之記載者。六、就發行人或某種有價證券之交易，依據不實之資料，作投資上之判斷，而以報刊、文書、廣播、電影或其他方法表示之者。七、會計師或律師，於查核公司有關證券交易之契約、報告書或證明文件時，為不實之簽證者。主管機關對於前項第七款之情事，得予以停止執行簽證工作之處分。
 
-> 釋：罰金刑修正為以新臺幣為單位。另由於違反本法之犯罪者，往往多屬於嚴重之經濟犯罪，參照過去執行案例實務，低額罰金顯不足以收嚇阻之效，故參酌銀行法提高罰金刑之幅度，將最高刑度提高。
+> 釋：一、第一項第一款酌作文字修正。二、於第一項第四款及第五款分別增列公開收購人提供之表冊、文件等相關文書其內容有虛偽之記載，應予以處罰之規定。
 
-* 175 違反第十八條第一項、第二十二條、第二十八條之二第一項、第四十三條第一項、第四十三條之一第二項、第四十四條第一項至第三項、第六十條第一項、第六十二條第一項、第九十三條、第九十六條至第九十八條、第一百十六條、第一百二十條、或第一百六十條之規定者，處二年以下有期徒刑、拘役或科或併科新臺幣一百八十萬元以下罰金。
+* 175 違反第十八條第一項、第二十二條、第二十八條之二第一項、第四十三條第一項、第四十三條之一第二項、第三項、第四十三條之五第二項、第三項、第四十三條之六第一項、第四十四條第一項至第三項、第六十條第一項、第六十二條第一項、第九十三條、第九十六條至第九十八條、第一百十六條、第一百二十條或第一百六十條之規定者，處二年以下有期徒刑、拘役或科或併科新臺幣一百八十萬元以下罰金。
 
-> 釋：一、罰金刑修正為以新臺幣為單位。另由於違反本法之犯罪者，往往多屬於嚴重之經濟犯罪，參照過去執行案例實務，低額罰金顯不足以收嚇阻之效，故參酌銀行法提高罰金刑之幅度，將最高刑度提高。二、將原第一百五十七條之一第一項之罰則改列於第一百七十一條加重處罰，本條之規定刪除。三、第一百五十七條之二第一項第一款適用對象為負責政策之公務人員，已受公務員服務法及刑法刑責規範，故將第二項刪除，以避免規定之重疊產生適用上之問題。
+> 釋：一、配合強制公開收購制度之增列，增列違反強制公開收購規定之刑責；另增列違反本會命令公開收購人變更公開收購申報事項並重行申報及公告、或停止公開收購行為之刑責。二、對於有價證券之私募違反私募應經股東會決議及對象之規定者，明定相關罰則。
 
 * 176 （刪除）
 
 > 釋：一、第七十四條及第八十四條均屬行政上消極防弊規定，無處刑罰之必要，宜改為行政罰。二、為符合刑罰條文在前，行政罰條文在後之體例，本條移列為第一百七十七條之一，本條刪除。
 
-* 177 有左列情事之一者，處一年以下有期徒刑、拘役或科或併科新臺幣一百二十萬元以下罰金：一、違反第三十一條第一項、第三十四條、第四十條、第四十五條、第四十六條、第五十條第二項、第一百十九條、第一百二十八條、第一百五十條或第一百六十五條之規定者。二、違反主管機關依第六十一條所為之規定者。
+* 177 有左列情事之一者，處一年以下有期徒刑、拘役或科或併科新臺幣一百二十萬元以下罰金：一、違反第三十一條第一項、第三十四條、第四十條、第四十三條之四第一項、第四十三條之八第一項、第四十五條、第四十六條、第五十條第二項、第一百十九條、第一百二十八條、第一百五十條或第一百六十五條之規定者。二、違反主管機關依第六十一條所為之規定者。
 
-> 釋：由於公開發行公司必須依證券交易法第三十六條第一項第一款規定公告並申報經會計師查核簽證之財務報告。又證券交易法第三十七條規定會計師辦理前條財務報告查核簽證，應經主管機關之核准，既然財務報告必須經會計師查核簽證，又應經主管機關之核准，若再科以刑罰規範，無異是畫蛇添足。爰刪除第四十一條。
+> 釋：一、第四十三條之四第三項已有準用第三十一條規定之明文，爰於第一款增列未交付公開收購說明書之相關刑責。二、對於違反私募有價證券再行賣出規定者，於第一款增列相關刑責。
 
 * 177.1 違反第七十四條或第八十四條之規定者，處相當於所取得有價證券價金額以下之罰鍰。但不得少於新臺幣十二萬元。
 
 > 釋：罰鍰處分修正為以新臺幣為單位；並為確實達行政罰鍰效果，斟酌將罰鍰額度提高。
 
-* 178 有左列情事之一者，處新臺幣十二萬元以上六十萬元以下罰鍰：一、違反第二十二條之二第一項、第二項、第二十五條第一項、第二項、第四項、第二十六條之一、第三十六條第四項、第四十三條之一第一項、第五十八條、第六十九條第一項、第七十三條、第七十七條、第七十九條、第一百四十一條、第一百四十四條、第一百四十五條第二項、第一百四十七條、第一百五十二條或第一百五十九條之規定者。二、發行人或其關係人、證券商或其委託人、證券商同業公會、證券交易所或第十八條所定之事業，對於主管機關命令提出之帳簿、表冊、文件或其他參考或報告資料，逾期不提出，或對於主管機關依法所為之檢查予以拒絕或妨礙者。三、發行人、證券商、證券商同業公會、證券交易所或第十八條所定之事業，於依法或主管機關基於法律所發布之命令規定之帳簿、表冊、傳票、財務報告或其他有關業務之文件，不依規定製作、申報、公告、備置或保存者。四、違反主管機關依第二十六條第二項所定之公開發行公司董事、監察人股權成數及查核實施規則之規定者。五、違反第二十八條之二第二項、第四項至第七項及主管機關依第三項所規定之事項者。有前項第二款至第四款規定之情事，經主管機關科處罰鍰，並責令限期辦理；逾期仍不辦理者，得繼續限期令其辦理，並按次連續各處新臺幣二十四萬元以上一百二十萬元以下罰鍰，至辦理為止。
+* 178 有左列情事之一者，處新臺幣十二萬元以上六十萬元以下罰鍰：一、違反第二十二條之二第一項、第二項、第二十五條第一項、第二項、第四項、第二十六條之一、第三十六條第四項、第四十一條、第四十三條之一第一項、第四十三條之六第五項至第七項、第五十八條、第六十九條第一項、第七十三條、第七十七條、第七十九條、第一百四十一條、第一百四十四條、第一百四十五條第二項、第一百四十七條、第一百五十二條或第一百五十九條之規定者。二、發行人、公開收購人或其關係人、證券商或其委託人、證券商同業公會、證券交易所或第十八條所定之事業，對於主管機關命令提出之帳簿、表冊、文件或其他參考或報告資料，屆期不提出，或對於主管機關依法所為之檢查予以拒絕或妨礙者。三、發行人、公開收購人、證券商、證券商同業公會、證券交易所或第十八條所定之事業，於依法或主管機關基於法律所發布之命令規定之帳簿、表冊、傳票、財務報告或其他有關業務之文件，不依規定製作、申報、公告、備置或保存者。四、違反主管機關依第二十六條第二項所定之公開發行公司董事、監察人股權成數及查核實施規則之規定者。五、違反第二十八條之二第二項、第四項至第七項或主管機關依第三項所規定之事項者。六、違反第四十三條之二第一項、第四十三條之三第一項、第四十三條之五第一項或主管機關依第四十三條之一第四項所規定之事項者。有前項第二款至第四款規定之情事，經主管機關處罰鍰，並責令限期辦理；屆期仍不辦理者，得繼續限期令其辦理，並按次連續各處新臺幣二十四萬元以上一百二十萬元以下罰鍰，至辦理為止。
 
-> 釋：一、罰鍰處分修正為以新臺幣為單位；並為確實達行政罰鍰效果，斟酌將罰鍰額度提高。二、配合第二十條之一規定，爰參照稅捐稽徵法第四十六條第一項、第二項，就拒不受調查者，予以適當之行政處分，爰於第一項增訂第五款。三、為防止藉逾期製作、申報、公告等方式規避行政責任，故修正第一項第三款，概括規定祇要不依規定製作、申報、公告等，即已構成行政罰鍰之要件，不以完全不作為為唯一條件。
+> 釋：一、於第一項第一款增列違反私募有價證券規定之處罰。另為配合第一百七十七條之修正違反第四十一條取消刑罰之規定，增列「第四十一條」。二、於第一項第二款、第三款及第六款增列公開收購人違反規定之處罰。三、第二項酌作文字修正。
 
 * 179 法人違反本法之規定者，依本章各條之規定處罰其為行為之負責人。
 
