公職人員選舉罷免法 2002.1.15

--- a/行政-內政/公職人員選舉罷免法.md
+++ b/行政-內政/公職人員選舉罷免法.md
@@ -284,9 +284,9 @@
 
 > 釋：一、配合憲法增修條文第十五條規定，刪除第一項監察委員選舉之規定。二、配合地方制度法制化，第一項第二款增列省（市）長選舉最低當選票數之計算；第二項增列省（市）長重行選舉之規定。
 
-* 67 當選人在就職前死亡或經判決當選無效確定者，依左列規定辦理：一、省（市）長、縣（市）長、鄉（鎮、市）長、村、里長部分，應定期重行選舉。二、國民大會代表、立法委員、省（市）議員、縣（市）議員、鄉（鎮、市）民代表部分，視同缺額；同一選舉區內缺額達二分之一時，應定期補選。但全國不分區、僑居國外國民選出之國民大會代表、立法委員不在此限；其所遺缺額，由該政黨登記之候選人名單按順位依次遞補；如該政黨登記之候選人名單無人遞補時，視同缺額。全國不分區、僑居國外國民選舉當選人，在就職前喪失其所屬政黨黨籍者，喪失其當選資格，其所遺缺額，由該政黨登記之候選人名單按順位依次遞補；如該政黨登記之候選人名單無人遞補時，視同缺額。前項政黨黨籍之喪失，應由所屬政黨檢附黨籍喪失證明書，向中央選舉委員會備案。
+* 67 當選人在就職前死亡或經判決當選無效確定者，依左列規定辦理：一、直轄市長、縣（市）長、鄉（鎮、市）長，村、里長部分，應定期重行選舉。二、國民大會代表、立法委員、直轄市議員、縣（市）議員、鄉（鎮、市）民代表當選人就職前非自然死亡者，視同缺額；同一選舉區內缺額達三分之一時，應定期補選。但全國不分區、僑居國外國民選出之國民大會代表、立法委員不在此限；其所遺缺額，由該政黨登記之候選人名單按順位依次遞補；如該政黨登記之候選人名單無人遞補時，視同缺額。三、國民大會代表、立法委員、直轄市議員、縣（市）議員、鄉（鎮、市）民代表當選人就職前自然死亡或經判決當選無效者，依得票數之順序遞補；無人遞補時，應定期補選。但全國不分區、僑居國外國民選出之國民大會代表、立法委員不在此限；其所遺缺額，由該政黨登記之候選人名單按順位依次遞補；如該政黨登記之候選人名單無人遞補時，視同缺額。全國不分區、僑居國外國民選舉當選人，在就職前喪失其所屬政黨黨籍者，喪失其當選資格；其所遺缺額，由該政黨登記之候選人名單按順位依次遞補；如該政黨登記之候選人名單無人遞補時，視同缺額。前項政黨黨籍之喪失，應由所屬政黨檢附黨籍喪失證明書，向中央選舉委員會備案。
 
-> 釋：一、將第一項序文中「當選無效」之下增「確定」二字以資明確。二、配合地方制度法制化，第一款增列省（市）長定期重行選舉之規定。三、配合憲法增修條文第十五條規定，刪除第二款監察委員之規定。四、為強化政黨政治，增列第二項規定。另增列第三項規定上開黨籍喪失由所屬政黨向中央選舉委員會備案。
+> 釋：一、第一項第一款「省（市）」修正為「直轄市」。二、當選人如係在就職前自然死亡或被判決當選無效，為了選區民眾的利益，同意依順序遞補；但是當選人如係意外死亡甚至被謀殺身亡，則絕對不能遞補，以免發生更多的悲劇，甚至有人以不當的手法爭取當選。爰修正第一項第二、三款。三、將缺額補選規定由原先二分之一放寬為三分之一，使選區民眾可得到更多民意關照。爰修正第一項第二款。
 
 * 67.1 當選人兼具外國國籍者，應於當選後就職前放棄外國國籍；逾期未放棄者，視為當選無效；其所遺缺額，依前條規定辦理。
 
